Botao de informação

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <div id="corpo">
 <H2>
     Cifra de Cesar
-</H2><br>
-
+</H2>
+<button class="info" id = "CesarBtn" onclick="Info()" value="1">O Que é</button>
+<br>
+<br>
 Textinho: <input type="text" id="dado" value="" >
 <br>
 <br>
