jorginho de navinha

--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
 <!DOCTYPE html>
-<html>
-    <link rel= "stylesheet" type = "text/css" href="extilo.css">
-    <head>
-        <meta charset="utf-8">
-        <title>Encripta sabagaça </title>
-</head>
-<h1>Encriptografando Coisas </h1>
-<div id="corpo">
-<H2>
-    Cifra de Cesar
-</H2>
-<button class="info" id = "CesarBtn" onclick="Info()" value="1">O Que é</button>
-<br>
-<br>
-Textinho: <input type="text" id="dado" value="" >
-<br>
-<br>
-Valor da Cifra: <input type = "number" id="cifra" value="4";>
-<br>
-<button class= "Enc" onclick="DoTheCaesarRoll()">Encriptografar </button>
-<br>
-<button class= "Dec" onclick="Choosing()">Descriptografar </button>
-<input type = "checkbox" id = "SeiACifra" name="SeiACifra" unchecked>
-<label for="SeiACifra">Marque Se Não Sabe O Valor Da Cifra</label>
-<br>
-<br>
-<output type="text" id="saida" > </output>
-    <script src="aaa.js"></script>
-</div>
+<html lang="en-us">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Unity WebGL Player | Sente O Rajadão</title>
+    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="stylesheet" href="TemplateData/style.css">
+    <script src="TemplateData/UnityProgress.js"></script>
+    <script src="Build/UnityLoader.js"></script>
+    <script>
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/vrau.json", {onProgress: UnityProgress});
+    </script>
+  </head>
+  <body>
+    <div class="webgl-content">
+      <div id="unityContainer" style="width: 960px; height: 600px"></div>
+      <div class="footer">
+        <div class="webgl-logo"></div>
+        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+        <div class="title">Sente O Rajadão</div>
+      </div>
+    </div>
+  </body>
 </html>
